@@ -1,5 +1,4 @@
-﻿zapret v.9
-
+﻿zapret v.10
 Для чего это надо
 -----------------
 
@@ -111,6 +110,7 @@ tpws - это transparent proxy.
  --daemon               ; демонизировать прогу
  --user=<username>	; менять uid процесса
  --split-http-req=method|host	; способ разделения http запросов на сегменты : около метода (GET,POST) или около заголовка Host
+ --split-pos=<offset>	; делить все посылы на сегменты в указанной позиции. Если отсыл длинее 8Kb (размер буфера приема), то будет разделен каждый блок по 8Kb.
  --hostcase             ; замена "Host:" => "host:"
  --hostdot		; добавление точки после имени хоста : "Host: kinozal.tv."
  --methodspace		; добавить пробел после метода : "GET /" => "GET  /"
